--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -1,13 +1,15 @@
 name: "Pull Request Docs Check"
-on: [push, pull_request, workflow_dispatch]
+on: [push]
 permissions:
   contents: write
 
 jobs:
+  # anything in the job "docs" is executed on the same runner
   docs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - run: apt-get update && apt-get install git
       - uses: ammaraskar/sphinx-action@master
         with:
           docs-folder: "docs/"
