--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - run: apt-get update && apt-get install git
+      - run: sudo apt-get update && sudo apt-get install git
       - uses: ammaraskar/sphinx-action@master
         with:
           docs-folder: "docs/"
