--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Install git
-        run: apt-get update && apt-get install git && source ~/.bashrc
+        run: sudo apt-get update && sudo apt-get install git && source ~/.bashrc && export PATH="/usr/bin/git":$PATH
       - uses: ammaraskar/sphinx-action@master
         with:
           docs-folder: "docs/"
