--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -1,4 +1,4 @@
-name: "Pull Request Docs Check"
+name: "Push Docs Build"
 on: [push]
 permissions:
   contents: write
@@ -9,10 +9,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: ammaraskar/sphinx-action@master
-        with:
-          pre-build-command: "apt-get update -y && apt-get install -y git"
-          docs-folder: "docs/"
+      - name: Build docs
+        run: |
+          wget https://bootstrap.pypa.io/get-pip.py
+          python get-pip.py
+          cd $GITHUB_WORKSPACE/docs
+          python -m pip install -r requirements.txt
+          make html
       - uses: peaceiris/actions-gh-pages@v3
         if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
         with:
