--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -28,13 +28,12 @@ jobs:
     steps:
       - name: Set up Git repository
         uses: actions/checkout@v3
-      - run: cd $GITHUB_WORKSPACE/thesis
       - name: Compile LaTeX document
         uses: xu-cheng/latex-action@v2
         with:
-          root_file: main.tex
+          root_file: thesis/main.tex
       - name: Upload PDF file
         uses: actions/upload-artifact@v3
         with:
           name: PDF
-          path: main.pdf
+          path: thesis/main.pdf
