load torch into docs

--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -5,4 +5,7 @@ myst_parser
 sphinx-autodoc-typehints
 jaxtyping
 pandoc
+torch 
+torchvision 
+torchaudio
 git+https://github.com/liopeer/type_hints.git
