--- a/environment.yml
+++ b/environment.yml
@@ -1,304 +1,157 @@
 name: liotorch
 channels:
-  - pyg
   - pytorch
-  - conda-forge
+  - nvidia
   - defaults
 dependencies:
-  - alabaster=0.7.12=pyhd3eb1b0_0
-  - appdirs=1.4.4=pyhd3eb1b0_0
-  - babel=2.11.0=py310hecd8cb5_0
+  - _libgcc_mutex=0.1=main
+  - _openmp_mutex=5.1=1_gnu
   - blas=1.0=mkl
-  - boltons=23.0.0=py310hecd8cb5_0
-  - bottleneck=1.3.5=py310h4e76f89_0
-  - brotli=1.0.9=hca72f7f_7
-  - brotli-bin=1.0.9=hca72f7f_7
-  - brotlipy=0.7.0=py310hca72f7f_1002
-  - bzip2=1.0.8=h1de35cc_0
-  - ca-certificates=2023.05.30=hecd8cb5_0
-  - cairo=1.16.0=h0ab9d94_1001
-  - catboost=1.2=py310h2ec42d9_4
-  - cctools=949.0.1=h9abeeb2_25
-  - cctools_osx-64=949.0.1=hc7db93f_25
-  - certifi=2023.5.7=py310hecd8cb5_0
-  - cffi=1.15.1=py310h6c40b1e_3
-  - chardet=4.0.0=py310hecd8cb5_1003
+  - brotlipy=0.7.0=py311h5eee18b_1002
+  - bzip2=1.0.8=h7b6447c_0
+  - ca-certificates=2023.08.22=h06a4308_0
+  - certifi=2023.7.22=py311h06a4308_0
+  - cffi=1.15.1=py311h5eee18b_3
   - charset-normalizer=2.0.4=pyhd3eb1b0_0
-  - colorama=0.4.6=py310hecd8cb5_0
-  - conda=23.3.1=py310hecd8cb5_0
-  - conda-build=3.25.0=py310hecd8cb5_0
-  - conda-index=0.2.3=py310hecd8cb5_0
-  - conda-package-handling=2.1.0=py310hecd8cb5_0
-  - conda-package-streaming=0.8.0=py310hecd8cb5_0
-  - contourpy=1.0.5=py310haf03e11_0
-  - cryptography=38.0.4=py310hf6deb26_0
-  - cycler=0.11.0=pyhd3eb1b0_0
-  - daal4py=2021.6.0=py310h20db666_1
-  - dal=2021.6.0=haf03e11_929
-  - docutils=0.18.1=py310hecd8cb5_3
-  - expat=2.5.0=hf0c8a7f_1
-  - ffmpeg=4.3=h0a44026_0
-  - fftw=3.3.9=h9ed2024_1
-  - filelock=3.9.0=py310hecd8cb5_0
-  - flit-core=3.6.0=pyhd3eb1b0_0
-  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
-  - font-ttf-inconsolata=3.000=h77eed37_0
-  - font-ttf-source-code-pro=2.038=h77eed37_0
-  - font-ttf-ubuntu=0.83=hab24e00_0
-  - fontconfig=2.13.94=h10f422b_0
-  - fonts-conda-ecosystem=1=0
-  - fonts-conda-forge=1=0
-  - freetype=2.12.1=hd8bbffd_0
-  - fribidi=1.0.10=hbcb3906_0
-  - gdk-pixbuf=2.42.10=h6c40b1e_0
-  - gettext=0.21.0=h7535e17_0
-  - giflib=5.2.1=h6c40b1e_1
-  - glib=2.69.1=hfff2838_2
-  - glob2=0.7=pyhd3eb1b0_0
-  - gmp=6.2.1=he9d5cce_3
-  - gnutls=3.6.15=hed9c0bf_0
-  - graphite2=1.3.14=he9d5cce_1
-  - graphviz=2.50.0=h196fa6a_0
-  - gts=0.7.6=h2684ab5_0
-  - harfbuzz=4.3.0=hffc734d_1
-  - icu=58.2=h0a44026_3
-  - idna=3.4=py310hecd8cb5_0
-  - imageio=2.26.0=py310hecd8cb5_0
-  - imagesize=1.4.1=py310hecd8cb5_0
-  - intel-openmp=2021.4.0=hecd8cb5_3538
-  - jinja2=3.1.2=py310hecd8cb5_0
-  - joblib=1.1.1=py310hecd8cb5_0
-  - jpeg=9e=hca72f7f_0
-  - jsonpatch=1.32=pyhd3eb1b0_0
-  - kiwisolver=1.4.4=py310hcec6c5f_0
-  - lame=3.100=h1de35cc_0
-  - lcms2=2.12=hf1fd2bf_0
-  - ld64=530=h20443b4_25
-  - ld64_osx-64=530=h70f3046_25
-  - ldid=2.1.2=h2d21305_2
-  - lerc=3.0=he9d5cce_0
-  - libarchive=3.6.2=h65c5294_0
-  - libbrotlicommon=1.0.9=hca72f7f_7
-  - libbrotlidec=1.0.9=hca72f7f_7
-  - libbrotlienc=1.0.9=hca72f7f_7
-  - libcxx=14.0.6=h9765a3e_0
-  - libdeflate=1.8=h9ed2024_5
-  - libexpat=2.5.0=hf0c8a7f_1
-  - libffi=3.4.2=hecd8cb5_6
-  - libgd=2.3.3=he7e2580_1
-  - libgfortran=5.0.0=11_3_0_hecd8cb5_28
-  - libgfortran5=11.3.0=h9dfd629_28
-  - libiconv=1.16=hca72f7f_2
-  - libidn2=2.3.2=h9ed2024_0
-  - liblief=0.12.3=hcec6c5f_0
-  - libllvm14=14.0.6=h91fad77_3
-  - libpng=1.6.39=h6c40b1e_0
-  - librsvg=2.54.4=h52d90eb_0
-  - libtasn1=4.16.0=h9ed2024_0
-  - libtiff=4.5.0=hcec6c5f_1
-  - libtool=2.4.7=hf0c8a7f_0
-  - libunistring=0.9.10=h9ed2024_0
-  - libwebp=1.2.4=h56c3ce4_0
-  - libwebp-base=1.2.4=hca72f7f_0
-  - libxml2=2.9.14=hbf8cd5e_0
-  - llvm-openmp=14.0.6=h0dcd299_0
-  - lz4-c=1.9.4=hcec6c5f_0
-  - markupsafe=2.1.1=py310hca72f7f_0
-  - matplotlib-base=3.7.1=py310ha533b9c_1
-  - mkl=2021.4.0=hecd8cb5_637
-  - mkl-service=2.4.0=py310hca72f7f_0
-  - mkl_fft=1.3.1=py310hf879493_0
-  - mkl_random=1.2.2=py310hc081a56_0
-  - more-itertools=8.12.0=pyhd3eb1b0_0
-  - mpi=1.0=mpich
-  - mpich=3.3.2=external_0
-  - munkres=1.1.4=py_0
-  - ncurses=6.4=hcec6c5f_0
-  - nettle=3.7.3=h230ac6f_1
-  - numexpr=2.8.4=py310h9638375_0
-  - numpy=1.23.5=py310h9638375_0
-  - numpy-base=1.23.5=py310ha98c3c9_0
-  - openh264=2.1.1=h8346a28_0
-  - openssl=1.1.1t=hca72f7f_0
-  - packaging=22.0=py310hecd8cb5_0
-  - pango=1.50.7=h80fe9ab_0
-  - patch=2.7.6=h1de35cc_1001
-  - pcre=8.45=he49afe7_0
-  - pillow=9.3.0=py310hcec6c5f_2
-  - pip=22.3.1=py310hecd8cb5_0
-  - pixman=0.38.0=h01d97ff_1003
-  - pkginfo=1.9.6=py310hecd8cb5_0
-  - pluggy=1.0.0=py310hecd8cb5_1
-  - pooch=1.4.0=pyhd3eb1b0_0
-  - psutil=5.9.0=py310hca72f7f_0
-  - py-lief=0.12.3=py310hcec6c5f_0
-  - pycosat=0.6.4=py310hca72f7f_0
+  - cryptography=41.0.3=py311hdda0065_0
+  - cuda-cudart=11.8.89=0
+  - cuda-cupti=11.8.87=0
+  - cuda-libraries=11.8.0=0
+  - cuda-nvrtc=11.8.89=0
+  - cuda-nvtx=11.8.86=0
+  - cuda-runtime=11.8.0=0
+  - ffmpeg=4.3=hf484d3e_0
+  - filelock=3.9.0=py311h06a4308_0
+  - freetype=2.12.1=h4a9f257_0
+  - giflib=5.2.1=h5eee18b_3
+  - gmp=6.2.1=h295c915_3
+  - gmpy2=2.1.2=py311hc9b5ff0_0
+  - gnutls=3.6.15=he1e5248_0
+  - idna=3.4=py311h06a4308_0
+  - intel-openmp=2023.1.0=hdb19cb5_46305
+  - jinja2=3.1.2=py311h06a4308_0
+  - jpeg=9e=h5eee18b_1
+  - lame=3.100=h7b6447c_0
+  - lcms2=2.12=h3be6417_0
+  - ld_impl_linux-64=2.38=h1181459_1
+  - lerc=3.0=h295c915_0
+  - libcublas=11.11.3.6=0
+  - libcufft=10.9.0.58=0
+  - libcufile=1.7.2.10=0
+  - libcurand=10.3.3.141=0
+  - libcusolver=11.4.1.48=0
+  - libcusparse=11.7.5.86=0
+  - libdeflate=1.17=h5eee18b_0
+  - libffi=3.4.4=h6a678d5_0
+  - libgcc-ng=11.2.0=h1234567_1
+  - libgomp=11.2.0=h1234567_1
+  - libiconv=1.16=h7f8727e_2
+  - libidn2=2.3.4=h5eee18b_0
+  - libnpp=11.8.0.86=0
+  - libnvjpeg=11.9.0.86=0
+  - libpng=1.6.39=h5eee18b_0
+  - libstdcxx-ng=11.2.0=h1234567_1
+  - libtasn1=4.19.0=h5eee18b_0
+  - libtiff=4.5.1=h6a678d5_0
+  - libunistring=0.9.10=h27cfd23_0
+  - libuuid=1.41.5=h5eee18b_0
+  - libwebp=1.2.4=h11a3e52_1
+  - libwebp-base=1.2.4=h5eee18b_1
+  - lz4-c=1.9.4=h6a678d5_0
+  - markupsafe=2.1.1=py311h5eee18b_0
+  - mkl=2023.1.0=h213fc3f_46343
+  - mkl-service=2.4.0=py311h5eee18b_1
+  - mkl_fft=1.3.8=py311h5eee18b_0
+  - mkl_random=1.2.4=py311hdb19cb5_0
+  - mpc=1.1.0=h10f8cd9_1
+  - mpfr=4.0.2=hb69a4c5_1
+  - mpmath=1.3.0=py311h06a4308_0
+  - ncurses=6.4=h6a678d5_0
+  - nettle=3.7.3=hbbd107a_1
+  - networkx=3.1=py311h06a4308_0
+  - numpy=1.25.2=py311h08b1b3b_0
+  - numpy-base=1.25.2=py311hf175353_0
+  - openh264=2.1.1=h4ff587b_0
+  - openssl=3.0.10=h7f8727e_2
+  - pillow=9.4.0=py311h6a678d5_0
+  - pip=23.2.1=py311h06a4308_0
   - pycparser=2.21=pyhd3eb1b0_0
-  - pyg=2.2.0=py310_torch_1.13.0_cpu
-  - pyopenssl=22.0.0=pyhd3eb1b0_0
-  - pyparsing=3.0.9=py310hecd8cb5_0
-  - pysocks=1.7.1=py310hecd8cb5_0
-  - python=3.10.9=h218abb5_0
-  - python-dateutil=2.8.2=pyhd3eb1b0_0
-  - python-graphviz=0.20.1=pyh22cad53_0
-  - python-libarchive-c=2.9=pyhd3eb1b0_1
-  - python_abi=3.10=2_cp310
-  - pytorch=1.13.1=py3.10_0
-  - pytorch-cluster=1.6.0=py310_torch_1.13.0_cpu
-  - pytorch-scatter=2.1.0=py310_torch_1.13.0_cpu
-  - pytorch-sparse=0.6.16=py310_torch_1.13.0_cpu
-  - pyyaml=6.0=py310h6c40b1e_1
-  - readline=8.2=hca72f7f_0
-  - requests=2.28.1=py310hecd8cb5_0
-  - ruamel.yaml=0.17.21=py310hca72f7f_0
-  - ruamel.yaml.clib=0.2.6=py310hca72f7f_1
-  - scikit-learn=1.0.2=py310hc081a56_0
-  - scikit-learn-intelex=2021.6.0=py310hecd8cb5_0
-  - scipy=1.10.0=py310h64422d5_0
-  - seaborn=0.12.2=py310hecd8cb5_0
-  - setuptools=65.6.3=py310hecd8cb5_0
-  - six=1.16.0=pyhd3eb1b0_1
-  - snowballstemmer=2.2.0=pyhd3eb1b0_0
-  - soupsieve=2.4=py310hecd8cb5_0
-  - sphinx=5.0.2=py310hecd8cb5_0
-  - sphinxcontrib-applehelp=1.0.2=pyhd3eb1b0_0
-  - sphinxcontrib-devhelp=1.0.2=pyhd3eb1b0_0
-  - sphinxcontrib-htmlhelp=2.0.0=pyhd3eb1b0_0
-  - sphinxcontrib-jsmath=1.0.1=pyhd3eb1b0_0
-  - sphinxcontrib-qthelp=1.0.3=pyhd3eb1b0_0
-  - sphinxcontrib-serializinghtml=1.1.5=pyhd3eb1b0_0
-  - sqlite=3.40.1=h880c91c_0
-  - tapi=1000.10.8=ha1b3eb9_0
-  - tbb=2021.6.0=ha357a0b_1
-  - threadpoolctl=2.2.0=pyh0d69192_0
-  - tk=8.6.12=h5d9f67b_0
-  - tomli=2.0.1=py310hecd8cb5_0
-  - toolz=0.12.0=py310hecd8cb5_0
-  - torchaudio=0.13.1=py310_cpu
-  - torchvision=0.14.1=py310_cpu
-  - tqdm=4.64.1=py310hecd8cb5_0
-  - typing_extensions=4.4.0=py310hecd8cb5_0
-  - tzdata=2022g=h04d1e81_0
-  - urllib3=1.26.14=py310hecd8cb5_0
-  - wheel=0.37.1=pyhd3eb1b0_0
-  - xz=5.2.10=h6c40b1e_1
-  - yaml=0.2.5=haf1e3a3_0
-  - zlib=1.2.13=h4dc903c_0
-  - zstandard=0.19.0=py310h6c40b1e_0
-  - zstd=1.5.2=hcb37349_0
+  - pyopenssl=23.2.0=py311h06a4308_0
+  - pysocks=1.7.1=py311h06a4308_0
+  - python=3.11.5=h955ad1f_0
+  - pytorch=2.0.1=py3.11_cuda11.8_cudnn8.7.0_0
+  - pytorch-cuda=11.8=h7e8668a_5
+  - pytorch-mutex=1.0=cuda
+  - readline=8.2=h5eee18b_0
+  - requests=2.31.0=py311h06a4308_0
+  - setuptools=68.0.0=py311h06a4308_0
+  - sqlite=3.41.2=h5eee18b_0
+  - sympy=1.11.1=py311h06a4308_0
+  - tbb=2021.8.0=hdb19cb5_0
+  - tk=8.6.12=h1ccaba5_0
+  - torchaudio=2.0.2=py311_cu118
+  - torchtriton=2.0.0=py311
+  - torchvision=0.15.2=py311_cu118
+  - typing_extensions=4.7.1=py311h06a4308_0
+  - tzdata=2023c=h04d1e81_0
+  - urllib3=1.26.16=py311h06a4308_0
+  - wheel=0.38.4=py311h06a4308_0
+  - xz=5.4.2=h5eee18b_0
+  - zlib=1.2.13=h5eee18b_0
+  - zstd=1.5.5=hc292b87_0
   - pip:
-      - addict==2.4.0
-      - anyio==3.6.2
-      - appnope==0.1.3
-      - argon2-cffi==21.3.0
-      - argon2-cffi-bindings==21.2.0
-      - arrow==1.2.3
-      - asttokens==2.2.1
-      - attrs==22.2.0
+      - appdirs==1.4.4
+      - asttokens==2.4.0
       - backcall==0.2.0
-      - beautifulsoup4==4.11.2
-      - bleach==6.0.0
-      - cachetools==5.3.0
-      - click==8.1.3
-      - comm==0.1.2
-      - configargparse==1.5.3
-      - dash==2.8.1
-      - dash-core-components==2.0.0
-      - dash-html-components==2.0.0
-      - dash-table==5.0.0
-      - debugpy==1.6.6
+      - click==8.1.7
+      - comm==0.1.4
+      - contourpy==1.1.1
+      - cycler==0.11.0
+      - debugpy==1.8.0
       - decorator==5.1.1
-      - defusedxml==0.7.1
-      - descartes==1.1.0
-      - dm-tree==0.1.8
-      - einops==0.6.1
+      - docker-pycreds==0.4.0
       - executing==1.2.0
-      - fastjsonschema==2.16.2
-      - fire==0.5.0
-      - flask==2.2.3
-      - fonttools==4.38.0
-      - fqdn==1.5.1
-      - ipykernel==6.21.2
-      - ipython==8.10.0
-      - ipython-genutils==0.2.0
-      - ipywidgets==8.0.4
-      - isoduration==20.11.0
-      - itsdangerous==2.1.2
-      - jedi==0.18.2
-      - jsonpointer==2.3
-      - jsonschema==4.17.3
-      - jupyter==1.0.0
-      - jupyter-client==8.0.3
-      - jupyter-console==6.5.1
-      - jupyter-core==5.2.0
-      - jupyter-events==0.6.3
-      - jupyter-server==2.3.0
-      - jupyter-server-terminals==0.4.4
-      - jupyterlab-pygments==0.2.2
-      - jupyterlab-widgets==3.0.5
-      - markdown-it-py==2.2.0
-      - matplotlib==3.5.2
+      - fonttools==4.42.1
+      - gitdb==4.0.10
+      - gitpython==3.1.36
+      - h5py==3.10.0
+      - ipykernel==6.25.2
+      - ipython==8.15.0
+      - jaxtyping==0.2.21
+      - jedi==0.19.0
+      - jupyter-client==8.3.1
+      - jupyter-core==5.3.2
+      - kiwisolver==1.4.5
+      - matplotlib==3.8.0
       - matplotlib-inline==0.1.6
-      - mdit-py-plugins==0.3.5
-      - mdurl==0.1.2
-      - mistune==2.0.5
-      - myst-parser==1.0.0
-      - nbclassic==0.5.2
-      - nbclient==0.7.2
-      - nbconvert==7.2.9
-      - nbformat==5.5.0
-      - nest-asyncio==1.5.6
-      - notebook==6.5.2
-      - notebook-shim==0.2.2
-      - nuscenes-devkit==1.1.10
-      - open3d==0.16.1
-      - opencv-python==4.7.0.68
-      - opt-einsum==3.3.0
-      - pandas==1.5.3
-      - pandocfilters==1.5.0
+      - nest-asyncio==1.5.8
+      - packaging==23.1
       - parso==0.8.3
+      - pathtools==0.1.2
       - pexpect==4.8.0
       - pickleshare==0.7.5
-      - platformdirs==3.0.0
-      - plotly==5.13.0
-      - prometheus-client==0.16.0
-      - prompt-toolkit==3.0.36
+      - platformdirs==3.10.0
+      - plotly==5.17.0
+      - positional-encodings==6.0.1
+      - prompt-toolkit==3.0.39
+      - protobuf==4.24.3
+      - psutil==5.9.5
       - ptyprocess==0.7.0
       - pure-eval==0.2.2
-      - pycocotools==2.0.6
-      - pygments==2.14.0
-      - pyquaternion==0.9.9
-      - pyro-api==0.1.2
-      - pyro-ppl==1.8.4
-      - pyrsistent==0.19.3
-      - python-json-logger==2.0.6
-      - pytz==2022.7.1
-      - pyzmq==25.0.0
-      - qtconsole==5.4.0
-      - qtpy==2.3.0
-      - rfc3339-validator==0.1.4
-      - rfc3986-validator==0.1.1
-      - send2trash==1.8.0
-      - shapely==1.8.5
-      - sniffio==1.3.0
-      - sphinx-rtd-theme==1.2.2
-      - sphinxcontrib-jquery==4.1
+      - pygments==2.16.1
+      - pyparsing==3.1.1
+      - python-dateutil==2.8.2
+      - pyyaml==6.0.1
+      - pyzmq==25.1.1
+      - sentry-sdk==1.31.0
+      - setproctitle==1.3.2
+      - six==1.16.0
+      - smmap==5.0.1
       - stack-data==0.6.2
-      - tenacity==8.2.1
-      - tensor-annotations==2.0.2
-      - tensor-type==0.1.0
-      - termcolor==2.2.0
-      - terminado==0.17.1
-      - tinycss2==1.2.1
-      - tornado==6.2
-      - traitlets==5.9.0
-      - typehints==0.0.2
-      - uri-template==1.2.0
+      - tenacity==8.2.3
+      - tornado==6.3.3
+      - traitlets==5.10.1
+      - typeguard==4.1.5
+      - wandb==0.15.10
       - wcwidth==0.2.6
-      - webcolors==1.12
-      - webencodings==0.5.1
-      - websocket-client==1.5.1
-      - werkzeug==2.2.3
-      - widgetsnbextension==4.0.5
-      - xgboost==1.7.5
-prefix: /Users/lionelpeer/opt/anaconda3/envs/liotorch
+prefix: /scratch_net/biwidl311/peerli/conda_envs/liotorch
